--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.Android_Master"
         tools:targetApi="31">
         <activity
-            android:name=".firstApp.ResultActivity"
+            android:name=".imCalculator.ImcCalculatorActivity"
             android:exported="false" />
         <activity
-            android:name=".firstApp.FirstAppActivity"
+            android:name=".MenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".firstApp.ResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".firstApp.FirstAppActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
